2020-04-02  Jay Berkenbilt  <ejb@ql.org>

	* Remove Members class indirection for QPDFObjectHandle. Those are
	copied and assigned too often, and that change caused a very
	substantial performance hit.

2020-03-31  Jay Berkenbilt  <ejb@ql.org>

	* When detecting unreferenced images during page splitting, if any
	XObjects are form XObjects, recursively descend into them and
	remove any unreferenced objects from them too. Fixes #373.

	* Add QPDFObjectHandle::filterAsContents, which filters a stream's
	data as if it were page contents. This can be useful to filter
	form XObjects the same way we would filter page contents.

	* If QPDF_EXECUTABLE is set, use it as the path to qpdf for
	purposes of completion. This variable is only read during the
	executation of `qpdf --completion-zsh` and `qpdf
	--completion-bash`. It is not used during the actual evaluation of
	completions.

2020-02-22  Jay Berkenbilt  <ejb@ql.org>

	* Update pdf-set-form-values.cc to use and mention
	generateAppearance, which hadn't been added when the example was
	originally created.

	* Detect, warn, and correct the case of /Pages in the document
	catalog incorrectly pointing to a page or intermediate node
	instead of the root of the pages tree. Fixes #398.

2020-01-26  Jay Berkenbilt  <ejb@ql.org>

	* 9.1.1: release

	* Bug fix: in qdf mode, do not write out any XRef streams that may
	have appeared in the original file. These are usually
	unreferenced, but with --preserve-unreferenced, they could be
	written out, which breaks fix-qdf's assumption that there is at
	most one XRef stream and that it appears at the end of the file.
	Fixes #386.

	* Bug fix: when externalizing inline images, a colorspace value
	that was a lookup key in the page's /Resource -> /ColorSpace
	dictionary was not properly handled. Fixes #392.

	* Add "encrypt" key to the json output. This contains largely the
	same information as given by --show-encryption but in a
	consistent, parseable format.
